# sdl-software-synthesizer

./: .gitignore  CMakeLists.txt  README
include/: application.h  filters.h  filters_defs.h  midi.h  opengl.h  shaders.h  software-synthesizer.h
src/: application.cpp  filters.cpp  main.cpp  midi.cpp  opengl.cpp  software-synthesizer.cpp
